# AmadeusGPT

./: .buildinfo  .codespellrc  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.sam2  INSTALL.md  Makefile  README.html  README.md  _config.yml  _toc.yml  app.py  genindex.html  install.sh  install_cpu.sh  install_cpu_minimal.sh  install_gpu.sh  install_minimal.sh  launch_amadeusGPT.py  objects.inv  packages.txt  pyproject.toml  requirements.txt  sam2_image.py  search.html  searchindex.js  setup.cfg  temp_for_debug.json
.github/workflows/: codespell.yml  publish-book.yml  pytest.yml  test_and_deploy.yaml  test_and_deploy.yml  trigger_deployment.yml
.streamlit/: config.toml
_sources/: README.md
amadeusgpt/: __init__.py  amadeus_security.py  api_registry.py  app.py  app_utils.py  common_task_programs.py  config.py  gui.py  implementation.py  integration_module_hub.py  interface.txt  logger.py  main.py  middle_end.py  module_matching.py  modules_embedding.pickle  project.py  sandbox.py  task_program_registry.py  utils.py  version.py
amadeusgpt/agentic/: video_llm.py
amadeusgpt/analysis_objects/: __init__.py  analysis_factory.py  animal.py  base.py  event.py  llm.py  model.py  object.py  relationship.py  visualization.py
amadeusgpt/behavior_analysis/: analysis_factory.py  animal_behavior_analysis.py  identifier.py
amadeusgpt/brains/: __init__.py  base.py  code_generator.py  diagnosis.py  explainer.py  rephraser.py  self_debug.py
amadeusgpt/configs/: Custom_template.yaml  EPM_template.yaml  Horse_template.yaml  MABe_template.yaml  MausHaus_template.yaml  mabe_template.yaml  supertopview_template.yaml  template.yaml
amadeusgpt/datamodel/: __init__.py  amadeus_answer.py
amadeusgpt/evo/: evolution.py
amadeusgpt/integration_modules/: __init__.py
amadeusgpt/integration_modules/embedding/: __init__.py  cebra.py  transform.py  umap.py
amadeusgpt/integration_modules/kinematics/: __init__.py  gait.py
amadeusgpt/managers/: __init__.py  animal_manager.py  base.py  event_manager.py  gui_manager.py  model_manager.py  object_manager.py  relationship_manager.py  visual_manager.py
amadeusgpt/modules/api/dataset_io/: mabe.py  monkey_reach_cebra.py
amadeusgpt/modules/api/embedding/: cebra.py  umap.py
amadeusgpt/modules/api/kinematics/: gait.py
amadeusgpt/modules/api/visualization/: ethogram_plot.py  gait_plot.py  occupancy_plot.py
amadeusgpt/modules/implementation/: __init__.py
amadeusgpt/modules/implementation/dataset_io/: __init__.py  mabe.py  monkey_reaching.py
amadeusgpt/modules/implementation/embedding/: __init__.py  cebra.py  transform.py  umap.py
amadeusgpt/modules/implementation/kinematics/: __init__.py  gait.py
amadeusgpt/modules/implementation/visualization/: __init__.py  embedding_plot.py  ethogram_plot.py  gait_plot.py  occupancy_plot.py
amadeusgpt/programs/: api_registry.py  evo_sandbox.py  mabe_social_mabe.py  sandbox.py  task_program_registry.py
amadeusgpt/system_prompts/: breed.py  code_generator.py  diagnosis.py  explainer.py  mutation.py  rephraser.py  self_debug.py  visual_llm.py
amadeusgpt/utils/: __init__.py
conda/: amadesuGPT-cpu.yml  amadesuGPT-gpu.yml  amadesuGPT-minimal.yml  amadesuGPT.yml  amadeusGPT.yml  install_cpu.sh  install_gpu.sh  install_minimal.sh
docker/: Dockerfile  Makefile  README.md
examples/: simple_amadeusGPT_demo.ipynb
examples/DummyVideo/: dummy_maushaus_superanimal_topviewmouse_hrnetw32.h5  dummy_maushaus_superanimal_topviewmouse_hrnetw32_before_adapt.json
examples/EPM/: example.json  roi_objects.pickle
examples/Horse/: BrownHorseinShadow_gt.h5  example.json
examples/MABe/: EGS8X2MN4SSUGFWAV976.h5  example.json
examples/MausHaus/: example.json
examples/MausHaus3D/: keypoints_3d_short.h5
notebook/: EPM_demo.ipynb  Horse_demo.ipynb  MABe_demo.ipynb  MausHaus_demo.ipynb  automatic_superanimal_selection.ipynb  custom_mouse_video.ipynb  temp_answer.json
notebook/.ipynb_checkpoints/: automatic_superanimal_selection-checkpoint.ipynb
notebooks/: EPM_demo.html  EPM_demo.ipynb  Horse_demo.html  Horse_demo.ipynb  MABe_demo.html  MABe_demo.ipynb  MausHaus_demo.html  MausHaus_demo.ipynb  Use_Task_Program.html  Use_Task_Program.ipynb  YourData.html  YourData.ipynb  custom_mouse_video.ipynb  simple_amadeusGPT_demo.ipynb
static/styles/: style.css
tests/: test_3d.py  test_EPM.py  test_MABE.py  test_MausHaus.py  test_animal_manager.py  test_demo_data.py  test_plot_keypoint_labels.py  test_project_creation.py  test_relationship_manager.py  test_superanimal.py  test_task_program.py
