[build-system]
requires = ["setuptools<=60.10.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AmadeusGPT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
version = "0.1.2"

[tool.setuptools]
packages = ["amadeusgpt"]

[tool.setuptools.dynamic]
dependencies = {file = ["setup.cfg"]}

[tool.codespell]
skip = '.git,*.pdf,*.svg,go.sum,*.css,*.txt'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'mabe,missings,nd,tread'
