[metadata]
name = amadeusgpt
version = 0.0.2
author = Shaokai Ye, Jessy Lauer, Mu Zhou, Alexander Mathis, Mackenzie Mathis
author_email = mackenzie@post.harvard.edu
description = AmadeusGPT🎻: We turn natural language descriptions of behaviors into machine-executable code
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/AmadeusGPT
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/AmadeusGPT/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    deeplabcut
    h5py
    tables<=3.7.0
    torch>=1.12.0
    torchvision>=0.13
    opencv-python-headless
    segment_anything
    dlc2kinematics>=0.0.7
    cebra
    moviepy
    pycocotools
    msgpack
    umap
    openai==0.27.4
    ffmpeg
    

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest

streamlit = 
    streamlit>=1.26.0
    streamlit_drawable_canvas==0.9.2
    ffmpeg 
    google-cloud-vision
    google-cloud-firestore
    RestrictedPython
    memory_profiler
    streamlit-profiler

[options.package_data]
* = interface.txt
    app.py
    launch_amadeusGPT
    app_utils.py
    static/*.*
    static/images/*.*
    static/styles/*.*

[options.entry_points]
console_scripts =
    launch_amadeusgpt = launch_amadeusGPT:main

[bdist_wheel]
universal=1