[metadata]
name = amadeusgpt
version = 0.0.3
author = Shaokai Ye, Jessy Lauer, Mu Zhou, Alexander Mathis, Mackenzie Mathis
author_email = mackenzie@post.harvard.edu
description = AmadeusGPT🎻: We turn natural language descriptions of behaviors into machine-executable code
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/AmadeusGPT
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/AmadeusGPT/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    openai==0.27.4
    deeplabcut # 0.02
    opencv-python-headless # 0.02
    segment_anything # 0.02
    cebra # 0.02
    moviepy # 0.02
    pycocotools # 0.02
    msgpack # 0.02
    umap # 0.02
    ffmpeg # 0.02
    cachetools # 0.03    

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest
    torch>=1.12.0 # 0.02
    torchvision>=0.13 # 0.02    

streamlit = 
    streamlit>=1.26.0
    streamlit_drawable_canvas==0.9.2
    ffmpeg

[options.package_data]
* = #interface.txt not needed for 0.03
    app.py
    launch_amadeusGPT
    app_utils.py
    static/*.*
    static/images/*.*
    static/styles/*.*

[options.entry_points]
console_scripts =
    launch_amadeusgpt = launch_amadeusGPT:main

[bdist_wheel]
universal=1