[metadata]
name = amadeusgpt
version = 0.1.3
author = Shaokai Ye, Jessy Lauer, Mu Zhou, Alexander Mathis, Mackenzie Mathis
author_email = mackenzie@post.harvard.edu
description = AmadeusGPT🎻: We turn natural language descriptions of behaviors into machine-executable code
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/AmadeusGPT
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/AmadeusGPT/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    openai>=1.0
    opencv-python-headless
    cebra>=0.4.0
    umap-learn 
    cachetools
    matplotlib<3.9
    ipympl
    PyYAML
    streamlit>=1.26.0
    streamlit_drawable_canvas==0.9.2
    #TONOTE: tables is required via conda install

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest

[options.package_data]
* = app.py
    launch_amadeusGPT
    app_utils.py
    static/*.*
    static/images/*.*
    static/styles/*.*
    configs/Horse_template.yaml
    configs/EPM_template.yaml
    configs/MausHaus_template.yaml
    configs/MABe_template.yaml

[options.entry_points]
console_scripts =
    launch_amadeusgpt = launch_amadeusGPT:main

[bdist_wheel]
universal=1
